// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-199kxs7-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      <div
        class="label-split"
      >
        <span
          class="label-help"
        >
          Label
        </span>
      </div>
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-24r3jw-MuiInputBase-root-MuiInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input css-m09luf-MuiInputBase-input-MuiInput-input"
        placeholder="Placeholder"
        type="text"
        value="test"
      />
    </div>
  </div>
</div>
`;

exports[`FormInput ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-tbnhf4-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      <div
        class="label-split"
      >
        <span
          class="label-help"
        >
          Label
        </span>
      </div>
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-1f3cw1u-MuiInputBase-root-MuiInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
        placeholder="Placeholder"
        type="text"
        value="test"
      />
    </div>
  </div>
</div>
`;

exports[`FormInput ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-yatows-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      <div
        class="label-split"
      >
        <span
          class="label-help"
        >
          Label
        </span>
      </div>
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-ban9wc-MuiInputBase-root-MuiInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input css-m09luf-MuiInputBase-input-MuiInput-input"
        placeholder="Placeholder"
        type="text"
        value="test"
      />
    </div>
  </div>
</div>
`;

exports[`FormInput ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-kmrcsy-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      <div
        class="label-split"
      >
        <span
          class="label-help"
        >
          Label
        </span>
      </div>
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-l0ftle-MuiInputBase-root-MuiInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
        placeholder="Placeholder"
        type="text"
        value="test"
      />
    </div>
  </div>
</div>
`;

exports[`FormInput ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-jayakb-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-cbb5y-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      <div
        class="label-split"
      >
        <span
          class="label-help"
        >
          Label
        </span>
      </div>
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-5o7tf2-MuiInputBase-root-MuiInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input css-x4ya5x-MuiInputBase-input-MuiInput-input"
        placeholder="Placeholder"
        type="text"
        value="test"
      />
    </div>
  </div>
</div>
`;
